# zk4lw

./: .gitignore  Cargo.toml  README.md  compose.sh
.github/workflows/: rust.yml
crates/client/: Cargo.toml
crates/client/src/: client.rs  errors.rs  lib.rs  result.rs  state.rs
crates/client/src/commands/: common.rs  mntr.rs  mod.rs
crates/client/src/parsing/: mod.rs
crates/rest/: Cargo.toml
crates/rest/src/: main.rs
etc/compose/: compose.sh  ensemble-3.5.yml  ensemble.yml  pull-latest.sh  standalone-3.5.yml  standalone.yml
fixtures/3.4/: conf.response  conf.response.sort  envi.response  envi.response.sort  mntr.response  mntr.response.sort
fixtures/3.5/: conf.response  conf.response.sort  envi.response  envi.response.sort  mntr.response  mntr.response.diff_prev_version  mntr.response.sort
fixtures/3.6/: conf.response  conf.response.sort  envi.response  envi.response.sort  mntr.response  mntr.response.diff_prev_version  mntr.response.sort  mntr.response.wip
fixtures/docker-compose/: ensemble.yml  standalone.yml
