[package]
name = "zk4lw-client"
version = "0.0.1"
edition = "2018"
authors = ["Ivan De Marino <detronizator@gmail.com>"]

description = """
Client for executing "4lw" (Four Letter Word) Commands against Zookeeper 
"""

[lib]
name = "zk4lw_client"
path = "src/lib.rs"

[dependencies]
failure = "0.1.7"